# crunch

./: .gitignore  .pre-commit-config.yaml  __main__.py  abc.txt  requirements-dev.txt  setup.cfg  setup.py
crunch/: __init__.py  __main__.py  _version.py  main.py
crunch/tests/: test_crunch.py
crunch/tests/test_data/: true-song_sheet.csv
crunch/tests/test_data/Apple/: 454 PW.csv  Anna Shoemaker PW.csv  Anna Shoemaker YTD.csv  Argonaut YTD.csv  Arthur YTD.csv  Coast YTD.csv  Geordie PW.csv  Geordie YTD.csv  Japan PW.csv  Japan YTD.csv  Julietta YTD.csv  Kenny PW.csv  Kenny YTD.csv  Lo Village PW.csv  Luna PW.csv  Nate PW.csv  Nate YTD.csv  Stevan YTD.csv
crunch/tests/test_data/Spotify/: 454 recordings-28day.csv  454 recordings-7day.csv  AOTN recordings-28day.csv  AOTN recordings-7day.csv  Anna Shoemaker recordings-28day.csv  Anna Shoemaker recordings-7day.csv  Argonaut recordings-28day.csv  Argonaut recordings-7day.csv  Arthur recordings-28day.csv  Arthur recordings-7day.csv  Coast recordings-28day.csv  Coast recordings-7day.csv  Geordie recordings-28day.csv  Geordie recordings-7day.csv  Japan recordings-28day.csv  Japan recordings-7day.csv  Julietta recordings-28day.csv  Julietta recordings-7day.csv  Kenny recordings-28day.csv  Kenny recordings-7day.csv  Leyya recordings-28day.csv  Leyya recordings-7day.csv  Lo Village recordings-28day.csv  Lo Village recordings-7day.csv  (+8 more)
luc/: __init__.py  __main__.py
luc/tests/: test_luc.py
luc/tests/test_data/: Output test_data.csv  Test Output.csv  Test Song Sheet.csv  test_data_audit.csv  true-output.csv
(+46 files in other folders)
