[metadata]
name = crunch
version = 0.0.1
author = Avi Lieberman
author_email = avilieberman@icloud.com
description = Luc Fatton, but infinitely faster
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    pandas
